04. Jul. 2013 - amo - initial commit of changinf component model to pure interface model... developers should implement components instead of extending
04. Jul. 2013 - amo - initial commit of Context, which contains basic metadata as well as the message listeners and will contain stuff like managedDialog factory
24. Jun. 2013 - amo - start initial work on context object
28. May. 2013 - amo - renamed OnStart and OnTearDown to PostConstruct and PreDestroy.
27. May. 2013 - amo - OnStart, OnHide annotation introduced to mark perspective methods
06. May. 2013 - amo - Action interface, renamed getLastMessage to getMessage, new method: getTypedMessage, isMessageTypeOf, messageEquals
24. Jan. 2013 - amo - changed version to 1.2 and update to java 7
24. Jan. 2013 - amo - add new Annotations (@Dialog, @Resource); add new package and define Scope enum, add new method to Launcher (registerAndGetBean) to register beans dynamically
12. Sep. 2012 - amo - Reduced IAction interface to ensure thread safety
26. Jun. 2012 - amo - update getActionListener to support target id and message
30. Mai. 2012 - amo - added resourceBundle and locale interfaces to declarative components
30. Mai. 2012 - amo - remove IDeclarative view, add UIType enum
29. Mai. 2012 - amo - add viewLocation to perspective annotation, add IDeclarative interface to mark components that can be implemented
20. Mai. 2012 - amo - extended API to support declarative UI components; Declarative components do not have a UI return because the xml file or whatever is always the root UI object
09. Apr. 2012 - amo - IExtendedComponent deleted
09. Apr. 2012 - amo - removed setRoot from IComponentView
09. Apr. 2012 - amo - add perspective annotation
08. Apr. 2012 - amo - removed some setter from IComponent  
08. Apr. 2012 - amo - IComponentView and IPerspectiveView extracted
08. Apr. 2012 - amo - Component and CallBackComponent annotation added
06. Apr. 2012 - amo - renamed IVComponent to IVisibleComponent