@@ -40,7 +40,6 @@ package org.jacp.api.component;
  *            defines the basic message type
  */
 public interface ICallbackComponent<L, A, M> extends ISubComponent<L, A, M>,
-        IHandleable<A, M>,
 		Cloneable {
 
 	/**
